--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    min-height: 100vh;
+    background: rgb(100, 117, 195);
+    background: linear-gradient(90deg, rgba(100, 117, 195, 0.7010154403558299) 0%, rgba(0, 86, 145, 1) 100%);
+}
