--- a/src/app/components/alumno-form/alumno-form.component.html
+++ b/src/app/components/alumno-form/alumno-form.component.html
@@ -103,11 +103,16 @@
 
             <app-spinner *ngIf="loading"></app-spinner>
 
-            <ng-container *ngIf="!loading && !formulario.valid && submitted">
-                <p class="text-danger fw-bold mt-5">Completa todos los campos correctamente.</p>
+            <ng-container *ngIf="!loading && submitted && !formulario.valid">
+                <ng-container *ngIf="formulario?.errors?.['passwordMismatch']">
+                    <div class="alert alert-danger d-flex align-items-center mt-1 mb-0 p-1" role="alert">
+                        <i class="fa-solid fa-circle-exclamation me-1"></i> <small>Las contraseñas no coinciden.</small>
+                    </div>
+                    <p class="text-danger fw-bold mt-5">Completa todos los campos correctamente.</p>
+                </ng-container>
             </ng-container>
 
-            <ng-container *ngIf="formulario.valid && !loading && submitted">
+            <ng-container *ngIf="!loading && submitted && formulario.valid">
                 <p class="text-success fw-bold mt-5">
                     Registro correcto.
                 </p>
