--- a/src/app/components/alumno-form/alumno-form.component.html
+++ b/src/app/components/alumno-form/alumno-form.component.html
@@ -2,67 +2,89 @@
     <main>
         <section>
             <h2 class="text-primary">Registro de alumno</h2>
-            <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
+            <form [formGroup]="formulario" (ngSubmit)="onSubmit()" class="needs-validation">
 
                 <div class="row mb-3">
                     <div class="col-xs-6 col-sm-3">
                         <label for="nombre" class="form-label">Nombre:</label>
-                        <input formControlName="nombre" type="text" class="form-control" id="nombre" name="nombre" autocomplete="given-name" required placeholder="Nombre"
-                            [ngClass]="formulario.get('nombre')?.invalid && formulario.get('nombre')?.touched ? 'text-danger' : ''">
-                        <app-error-helper [control]="$any(formulario.controls['nombre'])"></app-error-helper>
+                        <input formControlName="nombre" type="text" class="form-control" id="nombre" name="nombre"
+                            autocomplete="given-name" placeholder="Nombre" [ngClass]="{
+                                'is-invalid': nombre.invalid && nombre.touched,
+                                'is-valid': nombre.valid && nombre.touched
+                        }">
+                        <app-error-helper [control]="nombre"></app-error-helper>
                     </div>
 
                     <div class="col-xs-6 col-sm-3">
                         <label for="apellido" class="form-label">Apellido:</label>
-                        <input formControlName="apellido" type="text" class="form-control" id="apellido" name="apellido" autocomplete="family-name" required placeholder="Apellido"
-                            [ngClass]="formulario.get('apellido')?.invalid && formulario.get('apellido')?.touched ? 'text-danger' : ''">
-                        <app-error-helper [control]="$any(formulario.controls['apellido'])"></app-error-helper>
+                        <input formControlName="apellido" type="text" class="form-control" id="apellido" name="apellido"
+                            autocomplete="family-name" placeholder="Apellido" [ngClass]="{
+                                'is-invalid': apellido.invalid && apellido.touched,
+                                'is-valid': apellido.valid && apellido.touched
+                        }">
+                        <app-error-helper [control]="apellido"></app-error-helper>
                     </div>
                 </div>
 
                 <div class="row mb-3">
                     <div class="col-sm-6 col-md-3">
                         <label for="fechaNacimiento" class="form-label">Fecha de nacimiento:</label>
-                        <input formControlName="fechaNacimiento" type="date" class="form-control" id="fechaNacimiento" name="fechaNacimiento" autocomplete="bday" required placeholder="dd/mm/aaaa"
-                            [ngClass]="formulario.get('fechaNacimiento')?.invalid && formulario.get('fechaNacimiento')?.touched ? 'text-danger' : ''">
-                        <app-error-helper [control]="$any(formulario.controls['fechaNacimiento'])"></app-error-helper>
+                        <input formControlName="fechaNacimiento" type="date" class="form-control" id="fechaNacimiento"
+                            name="fechaNacimiento" autocomplete="bday" placeholder="dd/mm/aaaa" [ngClass]="{
+                                'is-invalid': fechaNacimiento.invalid && fechaNacimiento.touched,
+                                'is-valid': fechaNacimiento.valid && fechaNacimiento.touched
+                        }">
+                        <app-error-helper [control]="fechaNacimiento"></app-error-helper>
                     </div>
                 </div>
 
                 <div class="row mb-3">
                     <div class="col-sm-6 col-md-3">
                         <label for="dni" class="form-label">DNI:</label>
-                        <input formControlName="dni" type="text" class="form-control" id="dni" name="dni" inputmode="numeric" required placeholder="DNI"
-                            [ngClass]="formulario.get('dni')?.invalid && formulario.get('dni')?.touched ? 'text-danger' : ''">
-                        <app-error-helper [control]="$any(formulario.controls['dni'])"></app-error-helper>
+                        <input formControlName="dni" type="text" class="form-control" id="dni" name="dni"
+                            inputmode="numeric" placeholder="DNI" [ngClass]="{
+                                'is-invalid': dni.invalid && dni.touched,
+                                'is-valid': dni.valid && dni.touched
+                        }">
+                        <app-error-helper [control]="dni"></app-error-helper>
                     </div>
                 </div>
 
                 <div formGroupName="direccion" class="row mb-3">
                     <div class="col-sm-6 col-md-3">
                         <label for="provincia" class="form-label">Provincia:</label>
-                        <select formControlName="provincia" id="provincia" name="provincia" class="form-select" aria-label="Provincia" required>
+                        <select formControlName="provincia" id="provincia" name="provincia" class="form-select"
+                            aria-label="Provincia" [ngClass]="{
+                            'is-invalid': provincia.invalid && provincia.touched,
+                            'is-valid': provincia.valid && provincia.touched
+                    }">
                             <option [selected]="true" hidden disabled>Selecciona provincia</option>
                             <option value="Buenos Aires">Buenos Aires</option>
                             <option value="Córdoba">Córdoba</option>
                             <option value="Mendoza">Mendoza</option>
                             <option value="Salta">Salta</option>
                         </select>
-                        <app-error-helper [control]="$any(formulario.get('direccion.provincia'))"></app-error-helper>
+                        <app-error-helper [control]="provincia"></app-error-helper>
                     </div>
 
                     <div class="col-sm-6 col-md-3">
                         <label for="localidad" class="form-label">Localidad:</label>
-                        <input formControlName="localidad" type="text" class="form-control" id="localidad" name="localidad" autocomplete="address-level2" required placeholder="Florida"
-                            [ngClass]="formulario.get('direccion.localidad')?.invalid && formulario.get('direccion.localidad')?.touched ? 'text-danger' : ''">
-                        <app-error-helper [control]="$any(formulario.get('direccion.localidad'))"></app-error-helper>
+                        <input formControlName="localidad" type="text" class="form-control" id="localidad"
+                            name="localidad" autocomplete="address-level2" placeholder="Florida" [ngClass]="{
+                                'is-invalid': localidad.invalid && localidad.touched,
+                                'is-valid': localidad.valid && localidad.touched
+                        }">
+                        <app-error-helper [control]="localidad"></app-error-helper>
                     </div>
 
                     <div class="col-sm-6 col-md-3">
                         <label for="calle" class="form-label">Calle:</label>
-                        <input formControlName="calle" type="text" class="form-control" id="calle" name="calle" autocomplete="street-address" required placeholder="Calle 1234"
-                            [ngClass]="formulario.get('direccion.calle')?.invalid && formulario.get('direccion.calle')?.touched ? 'text-danger' : ''">
-                        <app-error-helper [control]="$any(formulario.get('direccion.calle'))"></app-error-helper>
+                        <input formControlName="calle" type="text" class="form-control" id="calle" name="calle"
+                            autocomplete="street-address" placeholder="Calle 1234" [ngClass]="{
+                                'is-invalid': calle.invalid && calle.touched,
+                                'is-valid': calle.valid && calle.touched
+                        }">
+                        <app-error-helper [control]="calle"></app-error-helper>
                     </div>
                 </div>
 
@@ -70,18 +92,24 @@
                 <div class="row mb-3">
                     <div class="col-sm-6 col-md-3">
                         <label for="email" class="form-label">E-mail:</label>
-                        <input formControlName="email" type="email" class="form-control" id="email" name="email" autocomplete="email" required placeholder="email@ejemplo.com"
-                            [ngClass]="formulario.get('email')?.invalid && formulario.get('email')?.touched ? 'text-danger' : ''">
-                        <app-error-helper [control]="$any(formulario.controls['email'])"></app-error-helper>
+                        <input formControlName="email" type="email" class="form-control" id="email" name="email"
+                            autocomplete="email" placeholder="email@ejemplo.com" [ngClass]="{
+                                'is-invalid': email.invalid && email.touched,
+                                'is-valid': email.valid && email.touched
+                        }">
+                        <app-error-helper [control]="email"></app-error-helper>
                     </div>
                 </div>
 
                 <div class="row mb-3">
                     <div class="col-sm-6 col-md-3">
                         <label for="password" class="form-label">Contraseña:</label>
-                        <input formControlName="password" type="password" class="form-control" id="password" name="password" autocomplete="new-password" required placeholder="Contraseña"
-                            [ngClass]="formulario.get('password')?.invalid && formulario.get('password')?.touched ? 'text-danger' : ''">
-                        <app-error-helper [control]="$any(formulario.controls['password'])"></app-error-helper>
+                        <input formControlName="password" type="password" class="form-control" id="password"
+                            name="password" autocomplete="new-password" placeholder="Contraseña" [ngClass]="{
+                                'is-invalid': password.invalid && password.touched,
+                                'is-valid': password.valid && password.touched
+                        }">
+                        <app-error-helper [control]="password"></app-error-helper>
                         <div class="form-text">
                             La contraseña debe tener entre 4-20 caracteres y debe contener letras y números.
                         </div>
@@ -89,9 +117,12 @@
 
                     <div class="col-sm-6 col-md-3">
                         <label for="repeatPassword" class="form-label">Repetir contraseña:</label>
-                        <input formControlName="repeatPassword" type="password" class="form-control" id="repeatPassword" name="repeatPassword" autocomplete="new-password" required
-                            placeholder="Contraseña" [ngClass]="formulario.get('repeatPassword')?.invalid && formulario.get('repeatPassword')?.touched ? 'text-danger' : ''">
-                        <app-error-helper [control]="$any(formulario.controls['repeatPassword'])"></app-error-helper>
+                        <input formControlName="repeatPassword" type="password" class="form-control" id="repeatPassword"
+                            name="repeatPassword" autocomplete="new-password" placeholder="Contraseña" [ngClass]="{
+                                'is-invalid': repeatPassword.invalid && repeatPassword.touched,
+                                'is-valid': repeatPassword.valid && repeatPassword.touched
+                        }">
+                        <app-error-helper [control]="repeatPassword"></app-error-helper>
                     </div>
                 </div>
 
@@ -105,20 +136,21 @@
 
             <ng-container *ngIf="!loading && submitted && !formulario.valid">
                 <ng-container *ngIf="formulario?.errors?.['passwordMismatch']">
-                    <div class="alert alert-danger d-flex align-items-center mt-1 mb-0 p-1" role="alert">
+                    <div class="alert alert-danger d-flex align-items-center mt-2 mb-0 p-1" role="alert">
                         <i class="fa-solid fa-circle-exclamation me-1"></i> <small>Las contraseñas no coinciden.</small>
                     </div>
-                    <p class="text-danger fw-bold mt-5">Completa todos los campos correctamente.</p>
                 </ng-container>
+                <p class="text-danger fw-bold mt-2">Completa todos los campos correctamente.</p>
             </ng-container>
 
             <ng-container *ngIf="!loading && submitted && formulario.valid">
-                <p class="text-success fw-bold mt-5">
+                <p class="text-success fw-bold mt-2">
                     Registro correcto.
                 </p>
-                <p class="mt-1 fw-bold">
+                <h3>JSON</h3>
+                <pre class="mt-1 fw-bold">
                     {{formulario.value | json}}
-                </p>
+                </pre>
             </ng-container>
         </section>
     </main>
