--- a/src/app/components/alumno-form/alumno-form.component.html
+++ b/src/app/components/alumno-form/alumno-form.component.html
@@ -133,7 +133,7 @@
 
             <ng-container *ngIf="!loading && submitted && !formulario.valid">
                 <ng-container *ngIf="formulario?.errors?.['passwordMismatch']">
-                    <div class="alert alert-danger d-flex align-items-center mt-2 mb-0 p-1" role="alert">
+                    <div class="alert alert-danger d-inline-block mt-2 mb-0 p-1" role="alert">
                         <i class="fa-solid fa-circle-exclamation me-1"></i> <small>Las contraseñas no coinciden.</small>
                     </div>
                 </ng-container>
